--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<h1>Welcome to {{ title }}!</h1>
-<app-price-plots></app-price-plots>
-
+<app-stock-display></app-stock-display>
