remove unnecessary if

--- a/frontend/src/app/stocks/stock-display/stock-display.component.html
+++ b/frontend/src/app/stocks/stock-display/stock-display.component.html
@@ -13,4 +13,4 @@
 
   </form>
 </div>
-<app-price-display [stock]="stockCurrentlyDisplayed" *ngIf="stockCurrentlyDisplayed"></app-price-display>
+<app-price-display [stock]="stockCurrentlyDisplayed"></app-price-display>
