fixed chart rendering bug by destroying old chart

--- a/frontend/src/app/stocks/stock-display/price-display/price-display.component.html
+++ b/frontend/src/app/stocks/stock-display/price-display/price-display.component.html
@@ -1,6 +1,8 @@
 <div class="container" *ngIf="stockPrice$">
   <h2>{{stockSymbol$ | async}}</h2>
-  <span>Price: </span>{{stockPrice$ | async}}
+  <span>Current price: </span>{{stockPrice$ | async}}
+  <br>
+  <span>Last updated: </span>{{lastUpdated$ | async}}
 </div>
 
 <div *ngIf="displayChart"
