--- a/frontend/src/app/stocks/stock-display/price-display/price-display.component.html
+++ b/frontend/src/app/stocks/stock-display/price-display/price-display.component.html
@@ -9,4 +9,8 @@
      class="center" style="position: relative;
      height:40vh; width:80vw">
   <canvas #canvas id="canvas">{{ priceChart }}</canvas>
+  <span>Data provided for free by
+    <a href="https://iextrading.com/developer/" target="_blank">IEX</a>.
+    View <a href="https://iextrading.com/api-exhibit-a/" target="_blank">
+      IEX’s Terms of Use</a>.</span>
 </div>
