--- a/frontend/src/app/stocks/stock-display/sentiment-display/sentiment-display.component.html
+++ b/frontend/src/app/stocks/stock-display/sentiment-display/sentiment-display.component.html
@@ -1,3 +1,3 @@
-<p>
-  sentiment-display works!
-</p>
+<div class="center" *ngIf="stockCompanyName$">
+  <h2>Sentiment for {{stockCompanyName$ | async}}</h2>
+</div>
