--- a/frontend/src/app/stocks/stock-display/sentiment-display/sentiment-display.component.html
+++ b/frontend/src/app/stocks/stock-display/sentiment-display/sentiment-display.component.html
@@ -1,8 +1,14 @@
 <div class="center" *ngIf="stockCompanyName$">
   <h2>Today's sentiment for {{stockCompanyName$ | async}}</h2>
-  <li *ngFor="let sentiment of sentiments">
-    {{ sentiment.name }}: {{ sentiment.value }}
-  </li>
+  <p *ngIf="sentiments.length == 0">
+    Please wait...
+  </p>
+  <table class="center">
+    <tr *ngFor="let sentiment of sentiments">
+      <td>{{ sentiment.name }}</td>
+      <td>{{ sentiment.value }}</td>
+    </tr>
+  </table>
   <span>Powered by
     <a href="https://newsapi.org/" target="_blank">NewsAPI.org</a> and
     <a href="https://www.ibm.com/watson/services/tone-analyzer/"
